# openpose_ros2

./: .gitignore  LICENSE  README.md  README_ja.md  package.xml
openpose_ros2/: package.xml  params.yml.sample  requirements.txt  setup.cfg  setup.py
openpose_ros2/launch/: openpose_ros2.py  openpose_ros2_launch.py
openpose_ros2/openpose_ros2/: openpose_node.py  wrapper.py
openpose_ros2_msgs/: CMakeLists.txt  package.xml
openpose_ros2_msgs/msg/: PoseKeyPoint.msg  PoseKeyPoints.msg  PoseKeyPointsList.msg
