<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openpose_ros2</name>
  <version>1.0.0</version>
  <description>A ROS2 package that call the OpenPose from ROS2.</description>
  <!-- OSS化のときに再検討 -->
  <maintainer email="is0436er@ed.ritsumei.ac.jp">Interaction Lab.</maintainer>
  <license>MIT License</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>openpose_ros2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
